--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>edu.berkeley.compbio</groupId>
+            <artifactId>jlibsvm</artifactId>
+            <version>0.911</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.media</groupId>
             <artifactId>jmf</artifactId>
             <version>2.1.1e</version>
@@ -33,6 +39,23 @@
             <version>1.7.6</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>dev.davidsoergel.com releases</id>
+            <url>http://dev.davidsoergel.com/nexus/content/repositories/releases</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>dev.davidsoergel.com snapshots</id>
+            <url>http://dev.davidsoergel.com/nexus/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
 
 
 </project>
